manifests/services/user-reader-service.yaml
# 1. Kubernetes Service (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: user-reader-service
  namespace: devops-learn
  labels:
    app: user-reader
    service: user-reader
spec:
  ports:
    - port: 8081
      targetPort: 8081
      name: http-port
      protocol: TCP
  selector:
    app: user-reader
---
# 2. Kubernetes Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-reader-deployment
  namespace: devops-learn
  labels:
    app: user-reader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-reader
  template:
    metadata:
      labels:
        app: user-reader
        version: v1
    spec:
      containers:
        - name: user-reader-app
          image: "edwinmalihu/user-reader-service:latest"
          ports:
            - containerPort: 8081
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
            requests:
              cpu: "250m"
              memory: "64Mi"
          livenessProbe:
            httpGet:
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
